# stonks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PHASE4.md  PLAN.md  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yml
.gstack/: browse-audit.jsonl  browse.json  claude-available.json  terminal-agent-pid  terminal-internal-token
app/: __init__.py  alerts.py  backup.py  cache.py  cli.py  config.py  db.py  jobs.py  ledger.py  schemas.py
app/data/: macro.py  (+6 more)
deploy/: docker-compose.yml
docs/: architecture.md  deployment.md  methodology.md  operations.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
scripts/: eval_discovery.py  eval_models.py  eval_runner.py  export_openapi.py
sidecar/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sidecar/app/: main.py  optimize.py  schemas.py  smoke.py
src/: index.ts  schema.ts
tests/: test_alerts.py  test_api_routes.py  test_backup.py  test_broker.py  test_budget.py  test_cache.py  test_charts.py  test_confidence.py  test_critic.py  test_data_empty.py  test_db.py  test_discovery_filters.py  test_history.py  test_holdings.py  test_import.py  test_indicators.py  test_jobs.py  test_ledger.py  test_performance_metrics.py  test_pipeline.py  test_plan.py  test_profiles.py  test_regime.py  test_research_result_compat.py  test_routes.py  test_sec.py  test_sec_filings.py  test_sizing.py  test_snapshots.py  test_tax.py  test_transactions.py  test_twr.py  test_usage_retry.py
(+116 files in other folders)
