[project]
name = "stocks-research"
version = "0.2.0"
description = "LLM-driven equity research assistant — fully Python (FastAPI + HTMX + Pydantic AI)"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi[standard]>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "jinja2>=3.1.4",
    "jinja2-fragments>=1.12.0",
    "python-multipart>=0.0.18",
    # LLM
    "pydantic-ai-slim[openrouter]>=1.107.0",
    "pydantic>=2.10",
    # Market data
    "yfinance>=1.4.1",
    "httpx>=0.28",
    # Portfolio optimization (folded-in sidecar)
    "skfolio>=0.20.1",
    "pandas>=2.2",
    "numpy>=2.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9",
    "edgartools>=5.38.0",
    "quantstats-lumi>=1.1.5",
    "fredapi>=0.5.2",
    "wbgapi>=1.0.14",
]

[project.scripts]
stocks = "app.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
