[project]
name = "portfolio-sidecar"
version = "0.1.0"
description = "Portfolio optimization sidecar (mean-variance via skfolio) for the stocks research assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "skfolio>=0.20.1",
    "yfinance>=1.4.1",
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
]

[tool.uv]
package = false
